// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatPanel renders without crashing when connected 1`] = `
<Fragment>
  <Connect(MessagesList) />
</Fragment>
`;

exports[`ChatPanel renders without crashing when not connected 1`] = `
<Fragment>
  <NotConnectedPopup />
</Fragment>
`;
